[package]
edition = "2024"
name = "embassy-adafruit-rpi-2040-uf2-led-matrix"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Andrey Kartashov <andrey.kartashov@gmail.com>"]
resolver = "2"

[dependencies]
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.9.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.28.0"
fixed-macro = "1.2"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "0.3", features = ["print-defmt"] }
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.2"
st7789 = "0.7.0"
display-interface = "0.5.0"
byte-slice-cast = { version = "1.2.2", default-features = false }
smart-leds = "0.4.0"
heapless = "0.8"
usbd-hid = "0.9.0"

embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.3", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = "2"
portable-atomic = { version = "1.10", features = ["critical-section"] }
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }


[profile.release]
debug = 2
